package by.dm13y.templates.behavior.observer;

public interface Observer {
    void update();
}
